--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
-  <title>BREAKEOUT!</title>
+  <title>BREAKOUT</title>
 </head>
 <body>
-  <!-- start here -->
+  <h1>Breakout!</h1>
+  <button id="rules-btn" class="btn rules-btn">
+    Show Rules
+  </button>
+  <div class="rules" id="rules">
+    <h2>How to play:</h2>
+    <p>Use ypur left and right arrow keys to move paddle to bounce the  ball up and break the blocks.</p>
+    <p>if you miss the ball , your score and blocks will reset.</p>
+    <button class="btn" id="close-btn">Close</button>
+  </div>
+  
+  <canves id="canves" width="800" height="600"></canves>
+
 
   <script src="js/style.js"></script>
 </body>
