--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <p>if you miss the ball , your score and blocks will reset.</p>
     <button class="btn" id="close-btn">Close</button>
   </div>
+  <!-- testing -->
   
   <canves id="canves" width="800" height="600"></canves>
 
